--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project Setting
-projectVersion=1.0.1
+version=2.0.0-SNAPSHOT
 
 # Dependencies Setting
-ver_bukkit=1.16.5-R0.1-SNAPSHOT
+ver_bukkit=1.19.4-R0.1-SNAPSHOT
