--- a/.github/workflows/helper-build-and-publish.yml
+++ b/.github/workflows/helper-build-and-publish.yml
@@ -1,23 +1,22 @@
-name: Publish Daydream-Helper
+name: Build and Publish
 
 on:
-  release:
-    types: [ created ]
+  push:
+    branches: [ master ]
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'zulu'
+          cache: 'gradle'
 
       - name : Build with Gradle
         run: |
