--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 # Project Setting
 version=1.21.4-R0.1-SNAPSHOT
+
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
