--- a/.github/workflows/helper-build-and-publish.yml
+++ b/.github/workflows/helper-build-and-publish.yml
@@ -9,23 +9,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'zulu'
           cache: 'gradle'
 
       - name : Build with Gradle
-        run: |
-          ./gradlew build --no-daemon
+        run: ./gradlew build
 
-      - name: Publish package
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: publishAllPublicationsToCaramelRepository
+      - name : Publish package
+        run: ./gradlew publishAllPublicationsToCaramelRepository
         env:
           DEPLOY_ID: ${{ secrets.DEPLOY_ID }}
           DEPLOY_PW: ${{ secrets.DEPLOY_PW }}
